# crewAI-examples

crews/instagram_post/: agents.py  main.py  pyproject.toml  tasks.py
crews/instagram_post/tools/: browser_tools.py  search_tools.py
