[project]
name = "instagram-post-example"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai[azure-ai-inference,tools]",
    "python-dotenv",
    "unstructured",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
